<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gysttodomanager.gysttodomanager.MainActivity" >
    <item android:id="@+id/add_button"
        android:title="@string/add_menu_text"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/edit_button"
        android:title="@string/edit_menu_text"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/delete_button"
        android:title="@string/delete_menu_text"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_appinfo"
        android:title="@string/action_appinfo"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
